--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -552,6 +552,9 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_BulletLifeComponent.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_rain_of_chaos_game_test_StageNodeScene.cpp">
+      <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -985,6 +988,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_StageConfig.h">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_rain_of_chaos_game_test_StageNodeScene.h">
+      <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
