add class : step_rain_of_chaos - game - StageNode

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -555,6 +555,9 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_test_StageNodeScene.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_rain_of_chaos_game_StageNode.cpp">
+      <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -991,6 +994,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_test_StageNodeScene.h">
       <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_rain_of_chaos_game_StageNode.h">
+      <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
