--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -282,6 +282,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_text_field_BMFontScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_type_effect_BasicScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_type_effect_ColorScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_type_effect_MultiByteScene.cpp" />
@@ -430,6 +431,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_practice_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
+    <ClInclude Include="..\Classes\ui_research_text_field_BMFontScene.h" />
     <ClInclude Include="..\Classes\ui_research_type_effect_BasicScene.h" />
     <ClInclude Include="..\Classes\ui_research_type_effect_ColorScene.h" />
     <ClInclude Include="..\Classes\ui_research_type_effect_MultiByteScene.h" />
