add scene : step_rain_of_chaos - game_test - SpawnProcessorScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -564,6 +564,9 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_BulletManager.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_rain_of_chaos_game_test_SpawnProcessorScene.cpp">
+      <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1012,6 +1015,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_BulletManager.h">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_rain_of_chaos_game_test_SpawnProcessorScene.h">
+      <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
