add class  : step_rain_of_chaos - game - SpawnProcessor

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -570,6 +570,9 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_AnimationInfoContainer.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor.cpp">
+      <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1023,6 +1026,9 @@
       <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_AnimationInfoContainer.h">
+      <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor.h">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClInclude>
   </ItemGroup>
