--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -283,6 +283,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_AnchorPointScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_TextureTypeScene.cpp" />
+    <ClCompile Include="..\Classes\ui_practice_LayoutChangeSequenceScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutNScrollViewScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutHorizontalScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutVerticalScene.cpp" />
@@ -445,6 +446,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_RootScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_AnchorPointScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_TextureTypeScene.h" />
+    <ClInclude Include="..\Classes\ui_practice_LayoutChangeSequenceScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutNScrollViewScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutHorizontalScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutVerticalScene.h" />
