--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -286,6 +286,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_practice_LayoutNScrollViewScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutHorizontalScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutVerticalScene.cpp" />
+    <ClCompile Include="..\Classes\ui_practice_layout_test_VariousItemSizeScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_Minimap.cpp" />
     <ClCompile Include="..\Classes\ui_practice_MouseCursorScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_RelativeLayoutScene.cpp" />
@@ -448,6 +449,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_practice_LayoutNScrollViewScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutHorizontalScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutVerticalScene.h" />
+    <ClInclude Include="..\Classes\ui_practice_layout_test_VariousItemSizeScene.h" />
     <ClInclude Include="..\Classes\ui_practice_Minimap.h" />
     <ClInclude Include="..\Classes\ui_practice_MouseCursorScene.h" />
     <ClInclude Include="..\Classes\ui_practice_RelativeLayoutScene.h" />
